# Local-AI-Assistant

./: README.md  pyproject.toml  requirements.txt
src/: models.py
src/agent/: assistant.py  prompts.py
src/api/: server.py
src/cli/: main_cli.py  server_cli.py  server_cli_stream.py  session.py
src/db/: chat_history.db  db.py
src/tools/: code_tools.py  file_tools.py  shell_tools.py  system_tools.py
