[project]
name = "3-localaideveloperandsystemassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "fastapi>=0.115.0",
    "frozenlist==1.8.0",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain>=0.3.0",
    "langchain-classic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-protocol==0.0.17",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.5",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.8.15",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "ollama==0.6.2",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "propcache==0.5.2",
    "psutil>=7.0.0",
    "pydantic>=2.11.0",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "python-dotenv>=1.1.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rich>=14.0.0",
    "send2trash==2.1.0",
    "shellingham==1.5.4",
    "sqlalchemy==2.0.50",
    "starlette==1.3.1",
    "tenacity==9.1.4",
    "typer>=0.16.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
    "websockets==15.0.1",
    "xxhash==3.7.0",
    "yarl==1.24.2",
    "zstandard==0.25.0",
]
